<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edDIname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/item_name_str"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/etDIweight"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/weight_str"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cbIDactivateFormula"
        app:layout_constraintTop_toBottomOf="@+id/etDIModif" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_item_str"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etDIdescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_str"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDIweight" />

    <ImageButton
        android:id="@+id/ibDIsaveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#00FFFFFF"
        android:tint="@color/primary_bronze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDIdescription"
        app:srcCompat="@drawable/ic_ok" />

    <ImageButton
        android:id="@+id/ibDIcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:tint="@color/primary_bronze_45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibDIsaveItem"
        app:layout_constraintTop_toBottomOf="@+id/etDIdescription"
        app:srcCompat="@drawable/ic_cross" />

    <CheckBox
        android:id="@+id/cbIDactivateFormula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:text="@string/add_formula_str"
        android:textColorHint="@color/primary_bronze_45"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/primary_bronze"
        android:buttonTint="@color/primary_bronze_70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDIname" />

    <EditText
        android:id="@+id/etDIDicesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="textPersonName"
        android:text="@string/_1"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/tvDId"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cbIDactivateFormula"
        app:layout_constraintTop_toBottomOf="@+id/edDIname" />

    <TextView
        android:id="@+id/tvDId"
        android:layout_width="13dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/d"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/etDIDicesAmount"
        app:layout_constraintTop_toBottomOf="@+id/edDIname" />

    <EditText
        android:id="@+id/etDIDice"
        android:layout_width="31dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/_20"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/tvDId"
        app:layout_constraintTop_toBottomOf="@+id/edDIname" />

    <EditText
        android:id="@+id/etDIModif"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/_add1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etDIDice"
        app:layout_constraintTop_toBottomOf="@+id/edDIname" />

</androidx.constraintlayout.widget.ConstraintLayout>